--- a/templates/contact.html
+++ b/templates/contact.html
@@ -44,24 +44,27 @@
         <div class="row d-flex mb-5 contact-info justify-content-center">
         	<div class="col-md-8">
         		<div class="row mb-5">
+            
 		          <div class="col-md-4 text-center py-4">
 		          	<div class="icon">
 		          		<span class="fa fa-map"></span>
 		          	</div>
-		            <p><span>Address:</span> 198 West 21th Street, Suite 721 New York NY 10016</p>
+		            <p><span>Address:</span>{% if contact.id == 1%}{{contact.address}}{% endif %}</p>
 		          </div>
+              {% for foot in footer %}
 		          <div class="col-md-4 text-center border-height py-4">
 		          	<div class="icon">
 		          		<span class="fa fa-phone"></span>
 		          	</div>
-		            <p><span>Phone:</span> <a href="tel://1234567920">+ 1235 2355 98</a></p>
+		            <p><span>Phone:</span> <a href="tel://{{foot.phone}}">{{foot.phone}}</a></p>
 		          </div>
 		          <div class="col-md-4 text-center py-4">
 		          	<div class="icon">
 		          		<span class="fa fa-paper-plane"></span>
 		          	</div>
-		            <p><span>Email:</span> <a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
+		            <p><span>Email:</span> <a href="mailto:{{foot.email}}">{{foot.email}}</a></p>
 		          </div>
+              {% endfor %}
 		        </div>
           </div>
         </div>
