--- a/templates/reset_password/password_reset_send.html
+++ b/templates/reset_password/password_reset_send.html
@@ -10,10 +10,10 @@
 			<div class="header">
 				<h2>Parolni tiklash</h2>
 			</div>
-            <div style="margin-bottom: 20px; color: #fff; background-color: #153742;">
+            <div style="margin-bottom: 20px; color: #fff;">
                 <p>Agar siz kiritgan elektron pochta orqali hisob mavjud bo'lsa parolni o'rnatish boyicha ko'rsatmalarni jo'natdik Tez orada ularni qabul qilishingiz mumkin</p>
             </div>
-            <div style="margin-bottom: 20px; color: #fff; background-color: #153742;">
+            <div style="margin-bottom: 20px; color: #fff;">
                 <p>Agar xabarni olmagan bo'lsangiz elektron pochtangizni to'g'ri kiritilganiga ishonch hosil qiling!!!</p>
             </div>
 		</div> 
