--- a/templates/blog-single.html
+++ b/templates/blog-single.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+
 {% block title %} Ecoverde Blog-single {% endblock title %}
 {% block content %}
     
@@ -40,153 +41,21 @@
               
               </div>
             
-            </div>
+            </div><hr>
             
-            <div class="about-author d-flex p-4 bg-light">
-              <div class="bio mr-5">
-                <img src="{% static 'images/person_1.jpg' %}" alt="Image placeholder" class="img-fluid mb-4">
-              </div>
-              <div class="desc">
-                <h3>George Washington</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus itaque, autem necessitatibus voluptate quod mollitia delectus aut, sunt placeat nam vero culpa sapiente consectetur similique, inventore eos fugit cupiditate numquam!</p>
-              </div>
+            
+            <div class="main-comment-section">
+            {% include 'coments.html' %}
             </div>
-
-
-            <div class="pt-5 mt-5">
-              <h3 class="mb-5">{{ comments.count }} Comments</h3>
-              {% for comment in comments %}
-              
-              <ul class="comment-list">
-                <li class="comment">
-                  <div class="vcard bio">
-                    <img src="{{comment.author.userdetail.author_image.url}}" alt="Image placeholder">
-                  </div>
-                  <div class="comment-body">
-                    <h3>{{ comment.name }}</h3>
-                    <div class="meta">{{comment.date}}</div>
-                    <p>{{comment.content}}</p>
-                    <p><a href="#" class="reply">Reply</a></p>
-                  </div>
-                </li>
-
-                {% comment %} <li class="comment">
-                  <div class="vcard bio">
-                    <img src="{% static 'images/person_1.jpg' %}" alt="Image placeholder">
-                  </div>
-                  <div class="comment-body">
-                    <h3>John Doe</h3>
-                    <div class="meta">June 01, 2020 at 2:21pm</div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
-                    <p><a href="#" class="reply">Reply</a></p>
-                  </div>
-
-                  <ul class="children">
-                    <li class="comment">
-                      <div class="vcard bio">
-                        <img src="{% static 'images/person_1.jpg' %}" alt="Image placeholder">
-                      </div>
-                      <div class="comment-body">
-                        <h3>John Doe</h3>
-                        <div class="meta">June 01, 2020 at 2:21pm</div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
-                        <p><a href="#" class="reply">Reply</a></p>
-                      </div>
-
-
-                      <ul class="children">
-                        <li class="comment">
-                          <div class="vcard bio">
-                            <img src="{% static 'images/person_1.jpg' %}" alt="Image placeholder">
-                          </div>
-                          <div class="comment-body">
-                            <h3>John Doe</h3>
-                            <div class="meta">June 01, 2020 at 2:21pm</div>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
-                            <p><a href="#" class="reply">Reply</a></p>
-                          </div>
-
-                            <ul class="children">
-                              <li class="comment">
-                                <div class="vcard bio">
-                                  <img src="{% static 'images/person_1.jpg' %}" alt="Image placeholder">
-                                </div>
-                                <div class="comment-body">
-                                  <h3>John Doe</h3>
-                                  <div class="meta">June 01, 2020 at 2:21pm</div>
-                                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
-                                  <p><a href="#" class="reply">Reply</a></p>
-                                </div>
-                              </li>
-                            </ul>
-                        </li>
-                      </ul>
-                    </li>
-                  </ul>
-                </li>
-
-                <li class="comment">
-                  <div class="vcard bio">
-                    <img src="{% static 'images/person_1.jpg' %}" alt="Image placeholder">
-                  </div>
-                  <div class="comment-body">
-                    <h3>John Doe</h3>
-                    <div class="meta">June 01, 2020 at 2:21pm</div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
-                    <p><a href="#" class="reply">Reply</a></p>
-                  </div>
-                </li> {% endcomment %}
-              </ul>
-              {% endfor %}
-              <!-- END comment-list -->
-              {% if new_comment %}
-                <div class="alert alert-success alert-dismissible fade show" role="alert">
-                  Your comment is awaiting moderation
-                </div>
-              {% else %}
-              <div class="comment-form-wrap pt-5">
-                <h3 class="mb-5">Leave a comment</h3>
-                {% if not request.user.is_authenticated %}
-                <form method="POST"  class="p-5 bg-light">
-                {% csrf_token %}
-                
-                    <div class="form-group">
-                      <label for="name">Name *</label>
-                      {{comment_form.name}}
-                    </div>
-                    <div class="form-group">
-                      <label for="email">Email *</label>
-                      {{comment_form.email}}
-                    </div>
-                  
-                    <div class="form-group">
-                      <label for="message">Message</label>
-                      {{comment_form.content}}
-                    </div>
-                    <a class="btn btn-outline-info" href="{% url 'sign_up' %}?next={{request.path}}">Log in to add a comment!</a>
-                {% else %}
-                    <div class="form-group">
-                      <label for="message">Message</label>
-                      <input type="hidden" name="name" value="{{request.user.username}}">
-                      <input type="hidden" name="email" value="{{request.user.email}}">
-                      {{comment_form.content}}
-                    </div>
-                    <div class="form-group">
-                      <input type="submit" value="Post Comment" class="btn py-3 px-4 btn-primary">
-                    </div>
-                {% endif %}
-                  
-               
-                </form>
-                
-              </div>
-              {% endif %}
-            </div>
-
           </div> <!-- .col-md-8 -->
+
+
+
+
+
           <div class="col-md-4 sidebar ftco-animate">
             <div class="sidebar-box">
-              <form method="GET" action="{% url 'search' %}" class="search-form">
+              <form method="GET" action="{% url 'post-search' %}" class="search-form">
                 <div class="form-group">
                   <span class="icon fa fa-search"></span>
                   <input type="text" name="keyvalue" class="form-control" placeholder="Type a keyword and hit enter">
@@ -194,6 +63,10 @@
               </form>
             </div>
             <div class="sidebar-box ftco-animate">
+
+
+
+
               <div class="categories">
                 <h3>Categories</h3>
                 {% for categorie in categories %}
@@ -202,6 +75,12 @@
                 {% endfor %}
               </div>
             </div>
+
+
+
+
+
+
             <h3>Recent Blog</h3>
             {% for blog in blog_post %}
             <div class="sidebar-box ftco-animate mb-0">
